# Vara_backend_django

./: .gitignore  README.md  design document.md  docker-compose.dev.yml  docker-postgresql.yaml  gunicorn_config.py  manage.py  pyproject.toml
content/: models.py  serializers.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_imageslide_image.py  0003_videolike_imagelike.py  0003_videolike_imagelike_videolike_unique_video_like_and_more.py  0003_videolike_imageslidelike_videolike_unique_video_like_and_more.py  0004_videocomment_imagecomment.py  0004_videocomment_imageslidecomment.py  0005_playlist.py  0006_post.py  0007_postcomment.py  0008_profilecomment.py  0009_forum_forumthread_forumpost.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_following_followers_following_unique_following_and_more.py  0003_friends_friends_unique_friends.py  0004_friendrequest_friendrequest_unique_friend_request.py  0005_alter_user_avatar_alter_user_header.py  0006_messagethread_message.py  0006_playlist.py  0007_notificationsettings_notification.py  0008_notification_url.py
docker/dev/: Dockerfile
docker/nginx/: Dockerfile
docker/nginx/conf.d/: default.conf
modules/: exceptions.py
modules/entities/: comment.py  post.py
modules/repository/: base_repository.py  comment_repository.py  post_repository.py
modules/usecases/: comment_usecase.py  post_usecase.py
utils/: commons.py  utils.py
vara_backend/: asgi.py  settings.py  urls.py  wsgi.py
